add bootsrapped data as global - needs to be corrected to AMD

--- a/index.html
+++ b/index.html
@@ -3,4 +3,139 @@
 <body>
 </body>
 <script src="js/require.js" data-main="js/main"></script>
+<script>
+
+    var bootstrappedData = {
+        "data": [
+            {
+                "name": "Facebook Platform",
+                "category": "Product/service",
+                "id": "19292868552"
+            },
+            {
+                "name": "Quiz Platform",
+                "category": "App page",
+                "id": "254521794619172"
+            },
+            {
+                "name": "Platform Kuis",
+                "category": "App page",
+                "id": "176721205769237"
+            },
+            {
+                "name": "Platforma Obywatelska",
+                "category": "Political party",
+                "id": "102931488739"
+            },
+            {
+                "name": "Tart\u0131\u015fma Platformu",
+                "category": "Personal blog",
+                "id": "170630292983365"
+            },
+            {
+                "name": "I Hate It When I Run Into A Wall And End Up On Platform 9 and 3/4",
+                "category": "Local business",
+                "id": "100948629944884"
+            },
+            {
+                "name": "Bilgi Platformu",
+                "category": "Actor/director",
+                "id": "211003922272468"
+            },
+            {
+                "name": "Bilin\u00e7lendirme Platformu [Hersey Dahil]",
+                "category": "Book",
+                "id": "176513062359791"
+            },
+            {
+                "name": "+18 arkada\u015f ekleme platformu",
+                "category": "Professional sports team",
+                "id": "182431248526649"
+            },
+            {
+                "name": "Platform",
+                "category": "Musician/band",
+                "id": "196784170358586"
+            },
+            {
+                "name": "Smoking crack at the train station trying to get to platform 9\u00be",
+                "category": "Community organization",
+                "id": "161900963873200"
+            },
+            {
+                "name": "\"I wasn't drunk\" \"Dude, you ran into a wall yelling \"platform 9 and 3/4\"",
+                "category": "Fictional character",
+                "id": "223690357655047"
+            },
+            {
+                "name": "'I wasn't that drunk' You ran at my wall trying to get to Platform 9 3/4",
+                "category": "Movie",
+                "id": "208209672548662"
+            },
+            {
+                "name": "\u0130lahiyat Platformu",
+                "category": "Society/culture",
+                "id": "116125545106323"
+            },
+            {
+                "name": "KAFASI G\u00dcZELLER PLATFORMU",
+                "category": "Tv show",
+                "id": "18967438705"
+            },
+            {
+                "name": "T\u00fcrk M\u00fczi\u011fi Payla\u015f\u0131m Platformu",
+                "category": "Musician/band",
+                "id": "103091466992"
+            },
+            {
+                "name": "Hate it when ya run into a wall and end up at platform 9 and 3/4",
+                "category": "Local business",
+                "id": "111880015491311"
+            },
+            {
+                "name": "platform58",
+                "category": "Arts/humanities",
+                "id": "161830929609"
+            },
+            {
+                "name": "TERC\u0130H s\u00fcrecinde ayn\u0131 okulu kazananlar\u0131n birbirini bulma PLATFORMU",
+                "category": "Education",
+                "id": "205890866097454"
+            },
+            {
+                "name": "Kitten Heels? I'd Rather Break Both My Legs In 6 Inch Platforms, Thanks",
+                "category": "Community",
+                "id": "163999570309295"
+            },
+            {
+                "name": "Ogrenciyizbiz paylas\u0131m platformu",
+                "category": "Magazine",
+                "id": "175843772460963"
+            },
+            {
+                "name": "\u0130slami Payla\u015f\u0131m Platformu",
+                "category": "Non-profit organization",
+                "id": "132602493477773"
+            },
+            {
+                "name": "Mimari Payla\u015f\u0131m Platformu",
+                "category": "Non-profit organization",
+                "id": "328669465166"
+            },
+            {
+                "name": "T\u00fcrk\u00e7e Rap Dinleme Platformu * T\u00fcrkRapFM - TR FM",
+                "category": "Radio station",
+                "id": "155563207808501"
+            },
+            {
+                "name": "Ars payLa\u015f\u0131m pLatformu",
+                "category": "Community",
+                "id": "249785141732686"
+            }
+        ],
+        "paging": {
+            "next": "https://graph.facebook.com/search?q=platform&type=page&data&limit=25&offset=25&__after_id=249785141732686"
+        }
+    }
+</script>
 </html>
